step15/setup/setup-prod/network-policy.yml
# Namespace간 통신금지
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy
metadata:
  name: deny-from-other-namespaces
  namespace: prod
spec:
  podSelector:
    matchLabels: {} # <- 모든 pod가 대상 
  ingress:
    - from:
        - podSelector: {}
---
# app: expose label이 붙은 파드만 외부 액세스 허용
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: expose-external
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: expose
    ingress:
    - from: {}
